--- a/pkp-lib/locale/de_DE/countries.xml
+++ b/pkp-lib/locale/de_DE/countries.xml
@@ -135,7 +135,7 @@
 	<country name="Libanon" code="LB"/>
 	<country name="Lesotho" code="LS"/>
 	<country name="Liberia" code="LR"/>
-	<country name="Libysch-Arabische Dschamahirija" code="LY"/>
+	<country name="Libyen" code="LY"/>
 	<country name="Liechtenstein" code="LI"/>
 	<country name="Litauen" code="LT"/>
 	<country name="Luxemburg" code="LU"/>
