--- a/pkp-lib/locale/de_DE/common.xml
+++ b/pkp-lib/locale/de_DE/common.xml
@@ -28,8 +28,11 @@
 	<message key="announcement.moreAnnouncements">Weitere Mitteilungen...</message>
 	<message key="announcement.noneExist">Es wurden keine Mitteilungen veröffentlicht.</message>
 	<message key="announcement.posted">Veröffentlicht</message>
-	<message key="announcement.viewLink">Weiter...</message>
+	<message key="announcement.postedOn">Veröffentlicht am {$postDate}</message>
+	<message key="announcement.viewLink">Weiter…</message>
 	<message key="announcement.view">Mitteilungen ansehen</message>
+	<message key="common.accepted">Akzeptiert</message>
+	<message key="common.acknowledged">Bestätigt</message>
 	<message key="common.action">Aktion</message>
 	<message key="common.activate">Aktivieren</message>
 	<message key="common.active">Aktiv</message>
@@ -49,6 +52,7 @@
 	<message key="common.between">zwischen</message>
 	<message key="common.cancel">Abbrechen</message>
 	<message key="common.cancelled">Abgebrochen</message>
+	<message key="common.warning">Warnung</message>
 	<message key="common.captchaField.altText">Bild zur Überprüfung</message>
 	<message key="common.captchaField.badCaptcha">Die Zeichen, die Sie eingegeben haben, entsprechen nicht den Zeichen im Bild. Bitte überprüfen Sie Ihre Eingabe und versuchen Sie es erneut.</message>
 	<message key="common.captchaField.description">Geben Sie bitte die Zeichen so ein, wie Sie in der obigen Grafik erscheinen.</message>
@@ -75,6 +79,9 @@
 	<message key="common.closeWindow">Fenster schließen</message>
 	<message key="common.complete">Beenden</message>
 	<message key="common.completed">Beendet</message>
+	<message key="common.confirm">Bestätigen</message>
+	<message key="common.content">Inhalt</message>
+	<message key="common.considered">Zugestimmt</message>
 	<message key="common.continue">Fortfahren</message>
 	<message key="common.copy">Kopieren</message>
 	<message key="common.country">Land</message>
@@ -88,6 +95,7 @@
 	<message key="common.day">Tag</message>
 	<message key="common.deactivate">Deaktivieren</message>
 	<message key="common.default">Standard</message>
+	<message key="common.declined">Abgelehnt</message>
 	<message key="common.delete">Löschen</message>
 	<message key="common.deleteSelection">Auswahl löschen</message>
 	<message key="common.description">Beschreibung</message>
@@ -123,12 +131,14 @@
 	<message key="common.keywords">Schlagworte</message>
 	<message key="common.language">Sprache</message>
 	<message key="common.languages">Sprachen</message>
+	<message key="common.less">Weniger</message>
 	<message key="common.manage">Verwalten</message>
 	<message key="common.mailingAddress">Adresse</message>
 	<message key="common.billingAddress">Rechnungsadresse (wenn unterschiedlich)</message>
 	<message key="common.minute">Minute(n)</message>
 	<message key="common.modify">Ändern</message>
 	<message key="common.month">Monat</message>
+	<message key="common.more">Mehr</message>
 	<message key="common.noneAssigned">Nicht zugewiesen</message>
 	<message key="common.none">Keine</message>
 	<message key="common.no">Nein</message>
@@ -138,6 +148,8 @@
 	<message key="common.notAvailable">Nicht bekannt</message>
 	<message key="common.note">Anmerkung</message>
 	<message key="common.notes">Anmerkungen</message>
+	<message key="common.notified">Benachrichtigt</message>
+	<message key="common.noMatches">Keine Treffer</message>
 	<message key="common.off">Aus</message>
 	<message key="common.on">Ein</message>
 	<message key="common.ok">OK</message>
@@ -146,6 +158,7 @@
 	<message key="common.originalFileName">Ursprünglicher Dateiname</message>
 	<message key="common.or">oder</message>
 	<message key="common.other">Andere</message>
+	<message key="common.overdue">Verspätet</message>
 	<message key="common.pageHeaderLogo.altText">Logo in der Kopfzeile</message>
 	<message key="common.plugin">Plug-In</message>
 	<message key="common.pluginDisabled">Das Plug-In "{$pluginName}" ist deaktiviert worden.</message>
@@ -156,13 +169,15 @@
 	<message key="common.record">Protokollieren</message>
 	<message key="common.refresh">Aktualisieren</message>
 	<message key="common.related">Verbunden</message>
+	<message key="common.reminder">Erinnerung</message>
 	<message key="common.remote">Entlegen</message>
-	<message key="common.remoteURL">EntlegenerURL</message>
+	<message key="common.remoteURL">Entlegener URL</message>
 	<message key="common.remove">Entfernen</message>
 	<message key="common.removeSelection">Auswahl entfernen</message>
 	<message key="common.replaced">Ersetzt</message>
 	<message key="common.replaceFile">Datei ersetzen</message>
 	<message key="common.requiredField">Mit * gekennzeichnete Eingabefelder sind Pflichtfelder.</message>
+	<message key="common.reset">Zurücksetzen</message>
 	<message key="common.required">Erforderlich</message>
 	<message key="common.saveAndContinue">Speichern und fortfahren</message>
 	<message key="common.saveAndEmail">Speichern und versenden</message>
@@ -172,6 +187,7 @@
 	<message key="common.selectAll">Alle auswählen</message>
 	<message key="common.selectNone">Auswahl aufheben</message>
 	<message key="common.select">Auswählen</message>
+	<message key="common.signoff">Abschließen</message>
 	<message key="common.size">Größe</message>
 	<message key="common.source">Quelle</message>
 	<message key="common.status">Status</message>
@@ -181,12 +197,15 @@
 	<message key="common.top">Zum Seitenanfang</message>
 	<message key="common.true">Wahr</message>
 	<message key="common.type">Typ</message>
+	<message key="common.element">Element</message>
 	<message key="common.uninitiated">Nicht begonnen</message>
+	<message key="common.unread">Ungelesen</message>
 	<message key="common.untitled">Ohne Titel</message>
 	<message key="common.updated">Aktualisiert</message>
 	<message key="common.uploadedFile">Hochgeladene Datei</message>
 	<message key="common.upload">Hochladen</message>
 	<message key="common.uploadFailed">Die Datei konnte nicht hochgeladen werden. Bitte probieren Sie es erneut oder benachrichtigen Sie den/die Administrator/in, wenn das Problem weiter besteht.</message>
+	<message key="common.fileUpload.maxFileSizeStatus"><![CDATA[Dieser Server erlaubt beim Hochladen von Dateien eine maximale Dateigröße von {$fileSize}.  Wenn Sie Unterstützung benötigen, wenden Sie sich bitte an <a href="mailto:{$supportEmail}">{$supportName}</a>.]]></message>
 	<message key="common.invalidFileType">Keine Datei hochgeladen oder ungültiger Dateityp!</message>
 	<message key="common.up">Aufwärts</message>
 	<message key="common.url">URL</message>
@@ -232,7 +251,8 @@
 	<message key="email.to">An</message>
 	<message key="form.confirmSubmit">Sind Sie sicher, dass Sie dieses Formular übermitteln möchten?</message>
 	<message key="form.confirmSubmit.title">Bestätigen</message>
-	<message key="form.dataHasChanged">Die Daten in diesem Formular haben sich geändert.</message>
+	<message key="form.dataHasChanged">Die Daten in diesem Formular haben sich geändert. Trotzdem fortfahren?</message>
+	<message key="form.emailRequired">Eine E-Mail-Adresse wird benötigt.</message>
 	<message key="form.errorsOccurred">Es sind Fehler bei der Bearbeitung des Formulars aufgetreten.</message>
 	<message key="form.formLanguage.description">Um die unten stehenden Angaben in einer weiteren Sprache einzugeben, wählen Sie bitte zunächst die gewünschte Sprache aus.</message>
 	<message key="form.formLanguage">Formularsprache</message>
@@ -248,6 +268,8 @@
 	<message key="form.invalidImage">Es wurde ein ungültiges Bild hochgeladen. Akzeptierte Formate sind .png, .gif und .jpg.</message>
 	<message key="help.contents">Inhalt</message>
 	<message key="help.help">Hilfe</message>
+	<message key="help.toggleInlineHelpOn">Hilfe ein</message>
+	<message key="help.toggleInlineHelpOff">Hilfe aus</message>
 	<message key="help.helpIndex">Hilfe-Verzeichnis</message>
 	<message key="help.matchesFound">{$matches} Resultate</message>
 	<message key="help.noMatchingTopics">Es wurden keine entsprechende Hilfethemen gefunden.</message>
@@ -274,10 +296,10 @@
 	<message key="locale.primary">Primäre Regionaleinstellung</message>
 	<message key="locale.supported">Unterstützte Regionaleinstellungen</message>
 	<message key="navigation.website">Website</message>
-	<message key="navigation.access"><![CDATA[Zugriff &amp; Sicherheit]]></message>
+	<message key="navigation.access"><![CDATA[Benutzer/innen &amp; Rollen]]></message>
 	<message key="navigation.about">Über uns</message>
 	<message key="navigation.admin">Verwaltung</message>
-	<message key="navigation.browse">Durchsuchen</message>
+	<message key="navigation.browse">Durchblättern</message>
 	<message key="navigation.browseByAuthor">Nach Autor/in</message>
 	<message key="navigation.browseByTitle">Nach Titel</message>
 	<message key="navigation.dashboard">Dashboard</message>
@@ -353,4 +375,8 @@
 	<message key="search.titleIndex">Titelverzeichnis durchsuchen</message>
 	<message key="search.title">Titel</message>
 	<message key="search.typeMethodApproach">Forschungsansatz, -methode und -verfahren</message>
+	
+	<!-- Common -->
+	<message key="grid.action.downloadFile">Diese Datei herunterladen</message>
+	
 </locale>
