--- a/pkp-lib/locale/de_DE/manager.xml
+++ b/pkp-lib/locale/de_DE/manager.xml
@@ -100,6 +100,7 @@
 	<message key="manager.languages.alternateLocaleInstructions">Dieses System bietet die Möglichkeit, wichtige Informationen in verschiedenen zusätzlichen Sprachen einzutragen. Dazu wählen Sie bitte aus der nachstehenden Liste eine andere Regionaleinstellung aus.</message>
 	<message key="manager.languages.supportedLocalesInstructions">Wählen Sie alle Regionaleinstellungen aus, die von der Website unterstützt werden sollen und die über ein Sprachenmenü auf jeder Seite ausgewählt werden können. Dieses Menü erscheint nur dann, wenn mehr als eine Regionaleinstellung ausgewählt wird.</message>
 	<message key="manager.masthead.title">Impressum</message>
+	<message key="manager.navigation">Navigation</message>
 	<message key="manager.payment.timestamp">Zeitpunkt</message>
 	<message key="manager.people.authSource">Authentifizierungsquelle</message>
 	<message key="manager.people.confirmUnenroll">Diese/n Benutzer/in austragen?</message>
@@ -151,23 +152,25 @@
 	<message key="manager.reviewerSearch.advancedSearch.short">Erweiterte Suche</message>
 	<message key="manager.reviewerSearch.searchByName">Nach Gutachter/in per Name suchen</message>
 	<message key="manager.reviewerSearch.searchByName.short">Suche nach Namen</message>
-	<message key="manager.reviewerSearch.doneAmount">Anzahl abgeschlossener Gutachten</message>
-	<message key="manager.reviewerSearch.avgAmount">Durchschnittliche Zahl an Tagen pro Gutachten</message>
+	<message key="manager.reviewerSearch.doneAmount">Abgeschlossene Gutachten</message>
+	<message key="manager.reviewerSearch.avgAmount">Durchschnittliche Dauer in Tagen pro Gutachten</message>
 	<message key="manager.reviewerSearch.lastAmount">Tage seit letztem Gutachten</message>
 	<message key="manager.reviewerSearch.activeAmount">Anzahl momentan aktiver Begutachtungen</message>
 	<message key="manager.reviewerSearch.interests">Begutachtungsinteressen</message>
+	<message key="manager.reviewerSearch.form.instructions">Benutzen Sie bitte das Formular unten, um Maximalwerte für die geplanten Suchen anzugeben. Das Formular ist vorausgefüllt mit den berechneten Durchschnittswerten dieser Felder.</message>
+	<message key="manager.reviewerSearch.form.interests.instructions">Geben Sie Begutachtungsinteressen ein, durch Kommata getrennt…</message>
 	<message key="manager.roles">Funktionen</message>
 	<message key="manager.setup.citationAssistant">Zitationsauszeichnungsassistent</message>
 	<message key="manager.setup.citationFilterParser">Zitationsextraktion</message>
 	<message key="manager.setup.citationFilterParserDescription"><![CDATA[<p>Um Zitationen in Zitationsdatenbanken zu finden und zu überprüfen, müssen Sie erstens in maschinenlesbare Metadaten aufgetrennt werden: Titel, Verlag, Veröffentlichungsdatum etc. müssen aus dem originalen Zitationstext, den der/die Autor/in geliefert hat, entnommen werden. Verknüpfungen zu externen Webdiensten können in diesem Prozess hilfreich sein. Eine oder mehrere Verknüpfungen können durch Klicken des "Eintrag hinzufügen"-Knopfes unten. Einige dieser Verknüpfungen könnten konfiguriert werden müssen; Sie werden in diesem Fall dazu aufgefordert werden.</p>
 		<p>Sie können existierende Verknüpfungen bearbeiten oder löschen, indem Sie das Symbol daneben anklicken.</p>]]></message>
 	<message key="manager.setup.citationFilterLookup">Zitationsprüfung</message>
-	<message key="manager.setup.citationFilterLookupDescription"><![CDATA[<p>Sie müssen auch Verknüpfungen zu externen Zitationsdatenbanken aktivieren und konfigurieren. Dies hilft Ihnen dabei, Fehler in den Autor/innen-Zitationen zu finden oder zusätzliche Informationen (z.B. DOI oder PubMed ID), die für elektronisches Publizieren oder Archivieren nötig sind, hinzuzufügen.</p>
-		<p>Wir liefern Verknüpfungen zu verschiedenen externen Datenbanken, in denen Sie nach Zitationen suchen können. Einige dieser Datenbanken erfordern die Eingabe Informationen zur Registrierung oder zu den Einstellungen. Bitte überprüfen Sie die öffentlichen WEbseiten der Datenbanken für weitere Informationen über die Registrierung. Sie können eine oder mehrere Datenbanken hinzufügen, indem Sie den "Eintrag hinzufügen"-Knopf unten drücken.</p>
-		<p>Sie können eine existierende Datenbankverknüpfung bearbeiten oder löschen, in dem Sie das zugehörige Symbol klicken.</p>
+	<message key="manager.setup.citationFilterLookupDescription"><![CDATA[<p>Sie müssen auch Verknüpfungen zu externen Zitationsdatenbanken aktivieren und konfigurieren. Dies hilft Ihnen dabei, Fehler in den Autor/innen-Zitationen zu finden oder zusätzliche Informationen (z.B. DOI- oder PubMed-ID), die für elektronisches Publizieren oder Archivieren nötig sind, hinzuzufügen.</p>
+		<p>Wir liefern Verknüpfungen zu verschiedenen externen Datenbanken, in denen Sie nach Zitationen suchen können. Einige dieser Datenbanken erfordern die Eingabe von Informationen zur Registrierung oder zu den Einstellungen. Bitte überprüfen Sie die öffentlichen Webseiten der Datenbanken für weitere Informationen über die Registrierung. Sie können eine oder mehrere Datenbanken hinzufügen, indem Sie den "Eintrag hinzufügen"-Knopf unten drücken.</p>
+		<p>Sie können eine existierende Datenbankverknüpfung bearbeiten oder löschen, indem Sie das zugehörige Symbol klicken.</p>
 		<p><strong>Hinweis:</strong> Damit die Zitationsprüfung in vertretbarer Zeit abgeschlossen werden kann, muss die <tt>citation_checking_max_processes</tt>-Direktive in Ihrer Konfigurationsdatei auf einen vernünftigen Wert gesetzt sein. Für weitere Informationen vgl. den General-Settings-Abschnitt in <tt>config.inc.php</tt>.]]></message>
 	<message key="manager.setup.citationOutput">Zitationsausgabe</message>
-	<message key="manager.setup.citationOutputStyleDescription">Bitte wählen Sie den Zitationsstil, der bei Ihren Autor/inneneinreichungen genutzt wird. Der Zitationsauszeichnungsassistent bietet Ihnen einen Vergleich zwischen der Autor/innenversion der Zitation zu einer aus dem von Ihnen erstellten XML generierten Version, so dass Sie Fehler einfach aufspüren können:</message>
+	<message key="manager.setup.citationOutputStyleDescription">Bitte wählen Sie den Zitationsstil, der bei den Beiträgen in Ihrer Publikation genutzt wird. Der Zitationsauszeichnungsassistent bietet Ihnen einen Vergleich zwischen der Autor/innenversion der Zitation zu einer aus dem von Ihnen erstellten XML generierten Version, so dass Sie Fehler einfach aufspüren können:</message>
 	<message key="manager.setup.errorDeletingItem">Es gab einen Fehler beim Löschen dieses Eintrags.</message>
 	<message key="manager.setup.filter.grid.errorDeletingFilter">Es ist ein Fehler beim Versuch, diesen Filter zu löschen, aufgetreten. Bitte melden Sie dies als einen Bug.</message>
 	<message key="manager.setup.filter.grid.filterDisplayName">Verknüpfung</message>
@@ -200,6 +203,7 @@
 	<message key="manager.setup.homeHeaderImageInvalid">Das Format des Logos in der Kopfzeile der Startseite ist ungültig. Gültige Formate sind .gif, .jpg und .png.</message>
 	<message key="manager.setup.homepageImageInvalid">Das Format des Bildes auf der Startseite ist ungültig. Gültige Formate sind .gif, .jpg und .png.</message>
 	<message key="manager.setup.homeTitleImageInvalid">Das Format des Titelbildes in der Kopfzeile der Startseite ist ungültig. Gültige Formate sind .gif, .jpg und .png.</message>
+	<message key="manager.setup.layout.blockManagement">Verwaltung der Sidebar</message>
 	<message key="manager.setup.layout.leftSidebar">Linke Seitenleiste</message>
 	<message key="manager.setup.layout.rightSidebar">Rechte Seitenleiste</message>
 	<message key="manager.setup.layout.unselected">Nicht ausgewählt</message>
